# baked-pytato-cms

./: README.md  pyproject.toml
bakedpytato/cli/: __init__.py  scripts.py
bakedpytato/cms/: _cms.py
bakedpytato/cms/admin/: __init__.py
bakedpytato/cms/configs/: image.json
bakedpytato/cms/content/: _elements.py  _render.py  schemas.py
bakedpytato/cms/content/elements/: _elements.py  images.py  interactables.py
bakedpytato/cms/editor/: __init__.py
bakedpytato/cms/editor/styles/: _styles.py
bakedpytato/db/: _db.py
bakedpytato/server/session/: permissions.py
docs/repo/: code_standards.md  quickstart-contributing.md
tests/cms/content/: test_elements.py
