[tool.poetry]
name = "bakedpytato"
version = "0.1.0"
description = "A simple Python-based CMS, for fun (but not profit)."
authors = ["Matthew DeGregorio <mdegregorio01@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.scripts]
bakedpytato = "bakedpytato.cli:command"

[tool.poetry.dependencies]
python = "^3.11"
dominate = "^2.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
